Change greeting from 'mi amor' to 'mi muñequita'
Agregué la cartica para mi  muñequita 💖

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 <div class="card">
   <div class="heart">💖</div>
 
-  <h2>Feliz Año Nuevo, mi amor</h2>
+  <h2>Feliz Año Nuevo, mi muñequita</h2>
 
   <p>
     Quería decirte esto… gracias por llegar a mi vida  
